Aggiornata pagina ricerca

--- a/ricerca.html
+++ b/ricerca.html
@@ -49,8 +49,7 @@
                 <ol class="breadcrumb" id="path">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li>Area Personale</li>
-                    <li class="active">Profilo</li>
+                    <li class="active">Ricerca</li>
                 </ol>
             </div>
 
@@ -98,21 +97,43 @@
                 <div class="row col-lg-12 search-result">
                     <img class="purchase-item-thumbnail fixed hidden-xs" src="img/frozen-deer-200x200.png">
                     <div class="purchase-item-details">
-                        <a href="#"><h4>Recensioni - Alaska - LaDamaBianca</h4></a>
+                        <a href="#"><h4>Recensioni - Alaska</h4></a>
                         <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
-                            <mark>escursioni</mark> e ci siamo divertiti tantissimo!11one!! Ce n'è veramente per tutti i gusti!! Ai bambini è piacuta soprattutto la cavalcata sulle renne di Babbo Natale, quelle vere!!1 Col naso rosso e tutto il resto! E volavano pure!UNO! E la neve forse non era neve ...</p>
+                            <mark>escursioni</mark> e ci siamo divertiti tantissimo!! Ce n'è veramente per tutti i gusti! Ai bambini è piacuta soprattutto la cavalcata sulle renne, dove ...</p>
                     </div>
                 </div>
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/alaska550x550.jpg">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" src="img/egitto-200x200.jpg">
                     <div class="purchase-item-details">
-                        <a href="#"><h4>Offerte - Alaska</h4></a>
-                        <p>... e se prenoti entro fine Ottobre, le prime 2
-                            <mark>escursioni</mark> le paghi solo la metà!!! E allora perchè aspettare? Prenota subito la tua vacanza sulla coc- hem neve ...</p>
+                        <a href="#"><h4>Offerte - Egitto</h4></a>
+                        <p>... e se prenoti 2
+                            <mark>escursioni</mark> prima della partenza l'escursione sui cammelli te la regaliamo noi!! E allora cosa aspetti? Prenota subito ...</p>
                     </div>
                 </div>
 
+            </div>
+
+            <!-- pagination -->
+
+            <div class="text-center">
+                <ul class="pagination">
+                    <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li><a href="#">2</a>
+                    </li>
+                    <li><a href="#">3</a>
+                    </li>
+                    <li><a href="#">4</a>
+                    </li>
+                    <li><a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
         </div>
