--- a/test.datepicker.html
+++ b/test.datepicker.html
@@ -58,7 +58,7 @@
 
         <div id="container">
 
-            <!--- CAROUSEL --->
+            <!--- SLIDER --->
 
             <div class="flexslider">
                 <ul class="slides">
@@ -106,6 +106,22 @@
             </div>
 
             <!-- ======== WIDGET PRENOTAZIONE ==========-->
+
+            <div class="datepicker">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Check in:
+                                <input class="span2" value="" id="dpd1" type="text">
+                            </th>
+                            <th>Check out:
+                                <input class="span2" value="" id="dpd2" type="text">
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <hr>
 
             <!-- Continenti -->
 
