--- a/studenti.html
+++ b/studenti.html
@@ -67,10 +67,10 @@
                         <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                         <a href="contatti.html" class="list-group-item"><i class="md md-email" data-toggle="collapse"></i> Contatti</a>
                         <a href="#sottomenu" class="list-group-item active" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
-                        <div class="collapse" id="sottomenu">
-                            <a href="lavori_stagionali.html" class="list-group-item">&#9679; Lavori stagionali</a>
-                            <a href="studenti.html" class="list-group-item list-group-item-success">&#9679; Studenti</a>
-                            <a href="stage.html" class="list-group-item">&#9679; Opportunità di stage</a>
+                        <div id="sottomenu">
+                            <a href="lavori_stagionali.html" class="list-group-item"><i class="md md-work"></i> Lavori stagionali</a>
+                            <a href="studenti.html" class="list-group-item list-group-item-success"><i class="md md-work"></i> Studenti</a>
+                            <a href="stage.html" class="list-group-item"><i class="md md-work"></i> Opportunità di stage</a>
                         </div>
                     </div>
 
