Aggiornato datepicker index

--- a/test.datepicker.html
+++ b/test.datepicker.html
@@ -55,7 +55,7 @@
     <!-- <script src="js/docs.min.js"></script> -->
 
     <script>
-        $('input').datepicker({
+        $('.input-group').datepicker({
             startDate: "today",
             todayBtn: "linked",
             clearBtn: true,
