--- a/viaggi/america/las-vegas.html
+++ b/viaggi/america/las-vegas.html
@@ -63,7 +63,7 @@
 
                     <div class="list-group">
                         <a href="/viaggi/europa.html" class="list-group-item"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
-                        <a href="/viaggi/america.html" class="list-group-item heading list-group-item-success"><i class="mg map-glb-am mg-fw"></i> America</a>
+                        <a href="/viaggi/america.html" class="list-group-item active"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="/viaggi/asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="/viaggi/africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="/viaggi/oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
