--- a/viaggi/europa.html
+++ b/viaggi/europa.html
@@ -60,7 +60,7 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <a href="europa.html" class="list-group-item heading list-group-item-success"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
+                        <a href="europa.html" class="list-group-item active"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
                         <a href="america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
