--- a/viaggi/oceania.html
+++ b/viaggi/oceania.html
@@ -64,7 +64,7 @@
                         <a href="america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
-                        <a href="oceania.html" class="list-group-item heading list-group-item-success"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
+                        <a href="oceania.html" class="list-group-item active"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
                     </div>
 
                 </div>
