--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div id="container">
 
-            <!--- CAROUSEL --->
+            <!--- SLIDER --->
 
             <div class="flexslider">
                 <ul class="slides">
@@ -101,19 +101,22 @@
 
             <!-- DATE PICKER -->
 
-            <div class="input-daterange input-group">
-                <span class="input-group-addon">Dal</span>
-                <input type="text" class="input-sm form-control" name="start" id="datepicker-dal" />
-                <span class="input-group-addon">al</span>
-                <input type="text" class="input-sm form-control" name="end" id="datepicker-al" />
-                <span class="input-group-addon">
+            <div class="container marketing">
+                <div class="input-daterange input-group hidden-xs">
+                    <span class="input-group-addon">Dal</span>
+                    <input type="text" class="input-sm form-control" name="start" id="datepicker-dal" />
+                    <span class="input-group-addon">al</span>
+                    <input type="text" class="input-sm form-control" name="end" id="datepicker-al" />
+                    <span class="input-group-addon">
                     <i class="fa fa-calendar"></i>
                 </span>
-            </div>
+                </div>
 
-            <!-- Continenti -->
+                <hr>
 
-            <div class="container marketing">
+                <!-- CONTINENTI -->
+
+
 
                 <div class="row">
 
@@ -140,7 +143,6 @@
                         <p><a class="btn btn-default" href="/viaggi/asia.html" role="button">Vedi le offerte</a>
                         </p>
                     </div>
-
                 </div>
 
                 <div class="seconda-riga">
@@ -169,7 +171,7 @@
                 </div>
             </div>
 
-            <!-- Marketing -->
+            <!-- RECENSIONE + AZIENDA -->
 
             <br>
             <div class="container featurette">
@@ -213,8 +215,6 @@
                             <br><a class="btn btn-default" href="chi_siamo.html" role="button">Scopri di più su di noi</a>
                         </p>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -244,6 +244,7 @@
             language: "it",
             autoclose: true,
             todayHighlight: true,
+            format: "dd/mm/yyyy",
             defaultViewDate: {
                 year: 1977,
                 month: 04,
@@ -257,6 +258,7 @@
             language: "it",
             autoclose: true,
             todayHighlight: true,
+            format: "dd/mm/yyyy",
             defaultViewDate: {
                 year: 1977,
                 month: 04,
