--- a/stage.html
+++ b/stage.html
@@ -62,15 +62,15 @@
 
                     <div class="list-group">
                         <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
-                        <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
+                        <a href="business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
                         <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
                         <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
-                        <a href="contatti.html" class="list-group-item"><i class="md md-email" data-toggle="collapse"></i> Contatti</a>
+                        <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                         <a href="#sottomenu" class="list-group-item active" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div id="sottomenu">
-                            <a href="lavori_stagionali.html" class="list-group-item"><i class="md md-work"></i> Lavori stagionali</a>
-                            <a href="studenti.html" class="list-group-item"><i class="md md-work"></i> Studenti</a>
-                            <a href="stage.html" class="list-group-item list-group-item-success"><i class="md md-work"></i> Opportunità di stage</a>
+                            <a href="lavori_stagionali.html" class="list-group-item"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
+                            <a href="studenti.html" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
+                            <a href="stage.html" class="list-group-item list-group-item-info"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
                         </div>
                     </div>
 
