Aggiornato menu continenti
inserito sottomenu nei continenti per selezione rapida dei viaggi
singoli

--- a/viaggi/america/las-vegas.html
+++ b/viaggi/america/las-vegas.html
@@ -64,6 +64,12 @@
                     <div class="list-group">
                         <a href="/viaggi/europa.html" class="list-group-item"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
                         <a href="/viaggi/america.html" class="list-group-item active"><i class="mg map-glb-am mg-fw"></i> America</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/america/las-vegas.html" class="list-group-item list-group-item-info"><i class="mg map-us mg-fw"></i> <em>(new) Las Vegas</em></a>
+                            <a href="/viaggi/america/isola-di-pasqua.html" class="list-group-item"><i class="mg map-cl mg-fw"></i> <em>Isola di Pasqua</em></a>
+                            <a href="/viaggi/america/ottawa.html" class="list-group-item"><i class="mg map-ca mg-fw"></i> <em>Ottawa</em></a>
+                            <a href="/viaggi/america/rio-de-janeiro.html" class="list-group-item"><i class="mg map-br mg-fw"></i> <em>Rio de Janeiro</em></a>
+                        </div>
                         <a href="/viaggi/asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="/viaggi/africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="/viaggi/oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
