--- a/viaggi/europa/venezia.html
+++ b/viaggi/europa/venezia.html
@@ -63,6 +63,12 @@
 
                     <div class="list-group">
                         <a href="/viaggi/europa.html" class="list-group-item active"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/europa/parigi.html" class="list-group-item"><i class="mg map-fr mg-fw"></i> <em>(new) Parigi</em></a>
+                                <a href="/viaggi/europa/barcellona.html" class="list-group-item"><i class="mg map-es mg-fw"></i> <em>Barcellona</em></a>
+                                <a href="/viaggi/europa/berlino.html" class="list-group-item"><i class="mg map-de mg-fw"></i> <em>Berlino</em></a>
+                                <a href="/viaggi/europa/venezia.html" class="list-group-item list-group-item-info"><i class="mg map-it mg-fw"></i> <em>Venezia</em></a>
+                        </div>
                         <a href="/viaggi/america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="/viaggi/asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="/viaggi/africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
