--- a/viaggi/oceania.html
+++ b/viaggi/oceania.html
@@ -65,6 +65,10 @@
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="oceania.html" class="list-group-item active"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/oceania/isole-fiji.html" class="list-group-item"><i class="mg map-fj mg-fw"></i> <em>(new) Isole Fiji</em></a>
+                            <a href="/viaggi/oceania/sydney.html" class="list-group-item"><i class="mg map-au mg-fw"></i> <em>Sydney</em></a>
+                        </div>
                     </div>
 
                 </div>
