--- a/viaggi/africa.html
+++ b/viaggi/africa.html
@@ -64,6 +64,10 @@
                         <a href="america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item active"><i class="mg map-glb-af mg-fw"></i> Africa</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/africa/egitto.html" class="list-group-item"><i class="mg map-eg mg-fw"></i> <em>(new) Egitto</em></a>
+                            <a href="/viaggi/africa/cape-town.html" class="list-group-item"><i class="mg map-za mg-fw"></i> <em>Cape Town</em></a>
+                        </div>
                         <a href="oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
                     </div>
 
