--- a/viaggi/america.html
+++ b/viaggi/america.html
@@ -62,6 +62,12 @@
                     <div class="list-group">
                         <a href="europa.html" class="list-group-item"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
                         <a href="america.html" class="list-group-item active"><i class="mg map-glb-am mg-fw"></i> America</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/america/las-vegas.html" class="list-group-item"><i class="mg map-us mg-fw"></i> <em>(new) Las Vegas</em></a>
+                            <a href="/viaggi/america/isola-di-pasqua.html" class="list-group-item"><i class="mg map-cl mg-fw"></i> <em>Isola di Pasqua</em></a>
+                            <a href="/viaggi/america/ottawa.html" class="list-group-item"><i class="mg map-ca mg-fw"></i> <em>Ottawa</em></a>
+                            <a href="/viaggi/america/rio-de-janeiro.html" class="list-group-item"><i class="mg map-br mg-fw"></i> <em>Rio de Janeiro</em></a>
+                        </div>
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
