--- a/viaggi/asia.html
+++ b/viaggi/asia.html
@@ -63,6 +63,10 @@
                         <a href="europa.html" class="list-group-item"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
                         <a href="america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="asia.html" class="list-group-item active"><i class="mg map-glb-as mg-fw"></i> Asia</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/asia/tokyo.html" class="list-group-item"><i class="mg map-jp mg-fw"></i> <em>(new) Tokyo</em></a>
+                            <a href="/viaggi/asia/shanghai.html" class="list-group-item"><i class="mg map-cn mg-fw"></i> <em>Shanghai</em></a>
+                        </div>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
                     </div>
