--- a/viaggi/asia/shanghai.html
+++ b/viaggi/asia/shanghai.html
@@ -65,6 +65,10 @@
                         <a href="/viaggi/europa.html" class="list-group-item"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
                         <a href="/viaggi/america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="/viaggi/asia.html" class="list-group-item active"><i class="mg map-glb-as mg-fw"></i> Asia</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/asia/tokyo.html" class="list-group-item"><i class="mg map-jp mg-fw"></i> <em>(new) Tokyo</em></a>
+                            <a href="/viaggi/asia/shanghai.html" class="list-group-item list-group-item-info"><i class="mg map-cn mg-fw"></i> <em>Shanghai</em></a>
+                        </div>
                         <a href="/viaggi/africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
                         <a href="/viaggi/oceania.html" class="list-group-item"><i class="mg map-glb-oc mg-fw"></i> Oceania</a>
                     </div>
