--- a/viaggi/europa.html
+++ b/viaggi/europa.html
@@ -61,6 +61,12 @@
 
                     <div class="list-group">
                         <a href="europa.html" class="list-group-item active"><i class="mg map-glb-eu mg-fw"></i> Europa</a>
+                        <div id="sottomenu">
+                            <a href="/viaggi/europa/parigi.html" class="list-group-item"><i class="mg map-fr mg-fw"></i> <em>(new) Parigi</em></a>
+                                <a href="/viaggi/europa/barcellona.html" class="list-group-item"><i class="mg map-es mg-fw"></i> <em>Barcellona</em></a>
+                                <a href="/viaggi/europa/berlino.html" class="list-group-item"><i class="mg map-de mg-fw"></i> <em>Berlino</em></a>
+                                <a href="/viaggi/europa/venezia.html" class="list-group-item"><i class="mg map-it mg-fw"></i> <em>Venezia</em></a>
+                        </div>
                         <a href="america.html" class="list-group-item"><i class="mg map-glb-am mg-fw"></i> America</a>
                         <a href="asia.html" class="list-group-item"><i class="mg map-glb-as mg-fw"></i> Asia</a>
                         <a href="africa.html" class="list-group-item"><i class="mg map-glb-af mg-fw"></i> Africa</a>
