Cambio font, aggiornamento sidebar & pagine

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 
                 <div class="row featurette hidden-xs">
                     <div class="row" id="Robert">
-                        <p id="cit">&ldquo;Io viaggio non per andare da qualche parte, ma per andare. Viaggio per viaggiare…&rdquo;</p>
+                        <p id="cit"><i class="fa fa-quote-left"></i> Io viaggio non per andare da qualche parte, ma per andare. Viaggio per viaggiare… <i class="fa fa-quote-right"></i>
+                        </p>
                         <p class="lead">-<em>Robert Louis Stevenson</em>
                         </p>
                     </div>
@@ -245,11 +246,6 @@
             autoclose: true,
             todayHighlight: true,
             format: "dd/mm/yyyy",
-            defaultViewDate: {
-                year: 1977,
-                month: 04,
-                day: 25
-            }
         });
     </script>
     <script>
@@ -259,11 +255,6 @@
             autoclose: true,
             todayHighlight: true,
             format: "dd/mm/yyyy",
-            defaultViewDate: {
-                year: 1977,
-                month: 04,
-                day: 25
-            }
         });
     </script>
 
