--- a/lavori_stagionali.html
+++ b/lavori_stagionali.html
@@ -68,9 +68,9 @@
                         <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                         <a href="#sottomenu" class="list-group-item active" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div id="sottomenu">
-                            <a href="lavori_stagionali.html" class="list-group-item list-group-item-info"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
-                            <a href="studenti.html" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
-                            <a href="stage.html" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
+                            <a href="#lavori_stagionali" class="list-group-item list-group-item-info"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
+                            <a href="#studenti" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
+                            <a href="#stage" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
                         </div>
                     </div>
 
@@ -79,16 +79,28 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <h1><small>Lavori stagionali. </small></h1>
+                    <div id="lavoristagionali">
+                        <h1><small>Lavori stagionali. </small></h1>
 
-                    <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum.</p>
+                        <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum.</p>
+                    </div>
+                    <div id="studenti">
+                        <h1><small>Studenti. </small></h1>
+
+                        <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum.</p>
+                    </div>
+                    <div id="stage">
+                        <h1><small>Opportunità di stage. </small></h1>
+
+                        <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum.</p>
+                    </div>
 
                     <!-- UPLOAD -->
 
                     <hr>
                     <div id="upload"></div>
                 </div>
-                <!-- /.ROW -->
+                <!-- /.COL-MD-6 -->
 
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3 hidden-xs" id="tags">
